master
------

* Allow user filter for LDAP to be configured
  - Set the AUTH_LDAP_USER_FILTER setting to change it (defaults to "(uid=%(user)s)")
* Update cabot-alert-hipchat plugin to 2.0.2
  - Fixes bug when both HIPCHAT_URL and HIPCHAT_DOMAIN were set

Version 0.10.2
--------------

* Update cabot-alert-hipchat plugin to 2.0.1
  - Supports Hipchat API v2
  - If HIPCHAT_URL is set, it will use the old v1 api
  - Use HIPCHAT_DOMAIN for custom hipchat v2 deployments
* Add interactive api docs (using djangorestframework 3.6) at /docs

Version 0.10.1
--------------

* [BUGFIX] Update cabot_alert_twilio to 1.3.1
  - 1.3.0 was still broken on django 1.10

Version 0.10.0
--------------

* Add feedback notifications when updated profile
* Automatically reload plugins after migrating
* Add cabot_alert_slack as default plugin
* Upgrade to Django 1.10
* Upgrade to Celery 4

Version 0.9.2
-------------

* Add /about endpoint
* Fix rota bug when ical had no timezone
* Add User Profile settings link to user dropdown

Version 0.9.1
-------------

* Update cabot-alert-twilio to 1.3.0 to work on django 1.10
* Fix Alert preferences form breaking on django 1.8
* Add `cabot` executable instead of using python manage.py (for e.g. migrating)

Version 0.9.0
-------------

* Upgrade to Django 1.9

Version 0.8.7
-------------

* Fix Alert preferences form breaking on django 1.8

Version 0.8.6
-------------

* Add first time setup page
* Remove create_cabot_superuser management command (redundant with first time setup)

Version 0.8.5
-------------

* More severe alerts should trigger even if a less severe alert was recently sent
* Update production.env.example email settings
* Convert environment vars to boolean nicely

> Note: You may have to update your settings if they contain invalid boolean values

Version 0.8.4
-------------

* Fix setup.py packaging
* Use whitenoise to serve static files

> Note: You may have to update your webserver settings for static files to work properly
